# airflow_agents_skills

./: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md
airflow/: .gitignore  Dockerfile  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
airflow/dags/: dbt_basic_dag.py  dbt_cosmos_dag.py  dbt_onepiece_cosmos_dag.py  dbt_openmeteo_cosmos_dag.py  dbt_pokemon_cosmos_dag.py  dbt_steam_cosmos_dag.py  onepiece_raw_ingest_dag.py  openmeteo_raw_ingest_dag.py  pokemon_raw_ingest_dag.py  steam_raw_ingest_dag.py
airflow/include/dbt/: .user.yml  dbt_project.yml  profiles.yml
airflow/include/dbt/docs/: overview.md
airflow/include/dbt/models/: customer_summary.sql  run_events.sql  schema.yml
airflow/include/dbt/models/onepiece/: onepiece_characters.sql  onepiece_fruits.sql  onepiece_sagas.sql  onepiece_summary.sql  schema_onepiece.yml
airflow/include/dbt/models/openmeteo/: openmeteo_daily.sql  openmeteo_daily_from_hourly.sql  openmeteo_daily_quality.sql  (+2 more)
airflow/include/dbt/seeds/: raw_customers.csv
airflow/include/sql/onepiece/: create_table_onepiece_characters.sql  create_table_onepiece_fruits.sql  create_table_onepiece_sagas.sql
airflow/include/sql/openmeteo/: create_table.sql  create_table_daily.sql
airflow/include/sql/pokemon/: create_table_pokemon.sql  create_table_pokemon_abilities.sql  create_table_pokemon_stats.sql  create_table_pokemon_types.sql
airflow/include/sql/steam/: create_app_details_table.sql  create_app_list_table.sql  create_schema.sql  create_source_fetch_log_table.sql  create_steamcharts_timeseries_table.sql
(+17 files in other folders)
